SERVER-53197 Don't log awaitable hello/ismaster as slow query