jstests/noPassthrough/awaitable_hello.js
@@ -5,6 +5,7 @@
  */
 (function() {
 "use strict";
+load("jstests/libs/fail_point_util.js");
 load("jstests/libs/parallel_shell_helpers.js");
 
 // runTest takes in the hello command or its aliases, isMaster and ismaster.
@@ -23,16 +24,50 @@ function runTest(db, cmd) {
     // field is expected to be of the form {processId: <ObjectId>, counter: <long>}.
     assert.commandWorked(
         db.runCommand({[cmd]: 1, topologyVersion: topologyVersionField, maxAwaitTimeMS: 0}));
-    // Ensure the command waits for at least maxAwaitTimeMS before returning.
+
+    // Ensure the command waits for at least maxAwaitTimeMS before returning, and doesn't appear in
+    // slow query log even if it takes many seconds.
+    assert.commandWorked(db.adminCommand({clearLog: 'global'}));
     let now = new Date();
+    jsTestLog(`Running slow ${cmd}`);
     assert.commandWorked(
-        db.runCommand({[cmd]: 1, topologyVersion: topologyVersionField, maxAwaitTimeMS: 2000}));
+        db.runCommand({[cmd]: 1, topologyVersion: topologyVersionField, maxAwaitTimeMS: 20000}));
     let commandDuration = new Date() - now;
     // Allow for some clock imprecision between the server and the jstest.
     assert.gte(
         commandDuration,
-        1000,
-        cmd + ` command should have taken at least 1000ms, but completed in ${commandDuration}ms`);
+        10000,
+        cmd + ` command should have taken at least 10000ms, but completed in ${commandDuration}ms`);
+
+    assert(!checkLog.checkContainsOnceJson(db.getMongo(), 51803, {
+        'command': function(obj) {
+            return obj.hasOwnProperty(cmd);
+        }
+    }));
+
+    // Check that the command appears in the slow query log if it's unexpectedly slow.
+    function runHelloCommand(cmd, topologyVersionField) {
+        assert.commandWorked(
+            db.runCommand({[cmd]: 1, topologyVersion: topologyVersionField, maxAwaitTimeMS: 1}));
+        jsTestLog(`${cmd} completed in parallel shell`);
+    }
+
+    assert.commandWorked(db.adminCommand({clearLog: 'global'}));
+
+    // Use a skip of 1, since the parallel shell runs hello when it starts.
+    const helloFailpoint = configureFailPoint(db, "waitInHello", {}, {skip: 1});
+    const awaitHello = startParallelShell(funWithArgs(runHelloCommand, cmd, topologyVersionField),
+                                          db.getMongo().port);
+    helloFailpoint.wait();
+    sleep(1000);  // Make the command hang for a second in the parallel shell.
+    helloFailpoint.off();
+    awaitHello();
+
+    checkLog.containsJson(db.getMongo(), 51803, {
+        'command': function(obj) {
+            return obj.hasOwnProperty(cmd);
+        }
+    });
 
     // Check that when a different processId is given, the server responds immediately.
     now = new Date();
@@ -150,14 +185,16 @@ function runTest(db, cmd) {
                                  [31373, 51759]);
 }
 
-const conn = MongoRunner.runMongod({});
+// Set command log verbosity to 0 to avoid logging *all* commands in the "slow query" log.
+const conn = MongoRunner.runMongod({setParameter: {logComponentVerbosity: tojson({command: 0})}});
 assert.neq(null, conn, "mongod was unable to start up");
 runTest(conn.getDB("admin"), "hello");
 runTest(conn.getDB("admin"), "isMaster");
 runTest(conn.getDB("admin"), "ismaster");
 MongoRunner.stopMongod(conn);
 
-const replTest = new ReplSetTest({nodes: 1});
+const replTest = new ReplSetTest(
+    {nodes: 1, nodeOptions: {setParameter: {logComponentVerbosity: tojson({command: 0})}}});
 replTest.startSet();
 replTest.initiate();
 runTest(replTest.getPrimary().getDB("admin"), "hello");
@@ -165,7 +202,12 @@ runTest(replTest.getPrimary().getDB("admin"), "isMaster");
 runTest(replTest.getPrimary().getDB("admin"), "ismaster");
 replTest.stopSet();
 
-const st = new ShardingTest({mongos: 1, shards: [{nodes: 1}], config: 1});
+const st = new ShardingTest({
+    mongos: 1,
+    shards: [{nodes: 1}],
+    config: 1,
+    other: {mongosOptions: {setParameter: {logComponentVerbosity: tojson({command: 0})}}}
+});
 runTest(st.s.getDB("admin"), "hello");
 runTest(st.s.getDB("admin"), "isMaster");
 runTest(st.s.getDB("admin"), "ismaster");
